sponsor div overflow issue resolved

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -427,9 +427,9 @@ hr{
   .intro-message{
     padding-top: 20%;
   }
-  #myModal{
+  /*#myModal{
     width: 40%;
-  }
+  }*/
   .navs-ul{
     float: left;
   }
